# ingres-backend

./: .env  README.md  docker-compose.yml  indexing.py  pyproject.toml
app/: main.py
app/controllers/chat/: main.py
app/routers/: user.py
app/utils/: indexing.py
static/excels/: CentralReport1759312707997.xlsx  CentralReport1759312713459.xlsx  CentralReport1759312719517.xlsx  CentralReport1759312726738.xlsx  CentralReport1759312732825.xlsx  CentralReport1759312738807.xlsx
